prover-ray/zkcdriver/testdata/synced/invalid/const_03.zkc
//error:2:20-25:unknown symbol
const LARGEPO:u8 = LARGE+1
